getting boxes in main

--- a/index.html
+++ b/index.html
@@ -31,14 +31,44 @@
         </p>
 
       </header>
-      <section class="container">
-          <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quas, pariatur aliquam totam asperiores adipisci consequatur veritatis tenetur rem minima laudantium quod recusandae soluta, nemo rerum amet porro explicabo delectus!
-          </p>
+      <main>
+        <section class="container">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quas, pariatur aliquam totam asperiores adipisci consequatur veritatis tenetur rem minima laudantium quod recusandae soluta, nemo rerum amet porro explicabo delectus!
+            </p>
 
-      </section>
-      
-    
+        </section>
+        <section class="container">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quas, pariatur aliquam totam asperiores adipisci consequatur veritatis tenetur rem minima laudantium quod recusandae soluta, nemo rerum amet porro explicabo delectus!
+            </p>
+
+        </section>
+        <section class="container">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quas, pariatur aliquam totam asperiores adipisci consequatur veritatis tenetur rem minima laudantium quod recusandae soluta, nemo rerum amet porro explicabo delectus!
+            </p>
+
+        </section>
+        <section class="container">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quas, pariatur aliquam totam asperiores adipisci consequatur veritatis tenetur rem minima laudantium quod recusandae soluta, nemo rerum amet porro explicabo delectus!
+            </p>
+
+        </section>
+        <section class="container">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quas, pariatur aliquam totam asperiores adipisci consequatur veritatis tenetur rem minima laudantium quod recusandae soluta, nemo rerum amet porro explicabo delectus!
+            </p>
+
+        </section>
+        <section class="container">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quas, pariatur aliquam totam asperiores adipisci consequatur veritatis tenetur rem minima laudantium quod recusandae soluta, nemo rerum amet porro explicabo delectus!
+            </p>
+
+        </section>
+    </main>
 </body>
 
 
